src/components/navbar/Navbar.css
* {
    font-family: "Roboto", sans-serif;
}

.navbar {
    width: 100%;
    display: flex;    
    position: sticky;
    top: 0;
    z-index: 1;
    padding-left: 4rem;
    padding-right: 4rem;
    height: 7rem;
}

.light-mode .navbar {
    border-bottom: 3px solid #000;
}

.dark-mode .navbar {
    border-bottom: 3px solid #fff;
}

.sticky {
    position: fixed;
    top: 0;
    width: 100%;
}

.navbar-section {
    font-size: 1.3rem;
}

.navbar-section:hover {
    color: #FAA613;
}

.dark-mode .navbar-section:hover {
    color: #fde12d;
}

.name {
    font-size: 2rem;
}

.light-mode .name-text:hover {
    color: rgb(105, 199, 254);
}

.dark-mode .name-text:hover {
    color: #8D98A7;
}

.github-icon,
.linkedin-icon {
    margin-left: 1rem;
}

.linkedin-icon {
    margin-right: 1rem;
}

.light-mode button.navbar-toggler {
    background-color: rgb(54, 84, 134);
}

.dark-mode button.navbar-toggler {
    background-color: #5e5f5e;
}

.light-mode {
    color: #000;
}

.light-mode .symbol {
    color: #FAA613;
}

.dark-mode .symbol {
    color: #FDE12D;
}

.icon-dark {
    filter: invert(0);
}

.icon-light {
    filter: invert(1);
}

@media (max-width: 990px) {
    .theme-toggle {
        margin-top: 1rem;
    }
    .left-section {
        margin-left: 1rem;
    }
    .navbar-section {
        width: 10%;
        font-size: 1rem;
    }

    .navbar-expanded {
        min-height: 25rem;
    }

    .right-section {
        width: 3%;
    }

    .github-icon {
        margin-top: 0.5rem;
        margin-bottom: 1.5rem;
    }
}

@media (max-width: 470px) {
    .navbar-expanded {
        min-height: 25rem;
    }

    .name {
        font-size: 1.5rem;
    }
}

@media (max-width: 280px) {
    .name {
        font-size: 1.2rem;
        text-align: center;
    }
}

